--- a/style.scss
+++ b/style.scss
@@ -67,6 +67,7 @@ summary::-webkit-details-marker {
     position: relative;
 
     &_list {
+        z-index: 1;
         left: -90px;
         position: absolute;
         padding-bottom: 22px;
@@ -165,7 +166,7 @@ input {
     font-weight: 300;
     letter-spacing: 0.025em;
     color: #a4a4a4;
-    padding: 8px 196px 8px 16px;
+    padding: 8px 159px 8px 16px;
 }
 
 .searc {
@@ -277,6 +278,7 @@ input {
     }
 
     &_button-top {
+        display: block;
         font-family: Lato;
         font-size: 14px;
         line-height: 1.2;
@@ -295,6 +297,7 @@ input {
     }
 
     &_button-bot {
+        display: block;
         font-family: Lato;
         font-size: 14px;
         line-height: 1.2;
@@ -334,13 +337,110 @@ input {
     gap: 35px;
 }
 
+.menu_list {
+    position: relative;
+}
+
 .menu_link {
+
+    padding-bottom: 20px;
+    padding-top: 20px;
     font-family: Lato;
     font-size: 14px;
     line-height: 26px;
     font-weight: 700;
     text-transform: uppercase;
     color: $Colorblack;
+}
+
+.mega-box {
+    padding: 21px 25px;
+    border: 1px solid #e8e8e8;
+    background-color: #ffffff;
+    border-radius: 5px;
+    position: absolute;
+    top: 30px;
+    left: -20px;
+    display: none;
+
+}
+
+.menu-item {
+    padding-left: 46px;
+}
+
+.menu-item:last-of-type {
+    margin-right: 0;
+}
+
+.menu_list:hover .mega-box {
+    display: flex;
+}
+
+.mega-box::before {
+    content: '';
+    display: block;
+    height: 16px;
+    width: 16px;
+    background-color: white;
+    position: absolute;
+    left: 30px;
+    top: -9px;
+    transform: rotate(45deg);
+    border-top: solid 1px #e8e8e8;
+    border-left: solid 1px #e8e8e8;
+
+}
+
+.menu-item1 {
+
+    padding-top: 37px;
+}
+
+.mega-box_logo {
+    margin-top: 22px;
+    display: block;
+    width: 225px;
+    height: 118px;
+    background: url(images/rectangle_23_1802.png);
+}
+
+.last:hover .mega-box {
+    right: 0;
+    left: auto;
+}
+
+.last:hover .mega-box::before {
+    right: 35px;
+    left: auto;
+}
+
+
+.menu-title {
+    width: 235px;
+    border-bottom: 1px solid #e8e8e8;
+    font-family: Lato;
+    font-size: 14px;
+    line-height: 32px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.025em;
+    color: #232323;
+    margin-bottom: 16px;
+}
+
+.mega-link {
+    font-family: Lato;
+    font-size: 14px;
+    line-height: 28px;
+    font-weight: 400;
+    letter-spacing: 0.025em;
+    color: #646464;
+    display: block;
+
+    &:hover {
+        color: $PinkColor;
+    }
 }
 
 .title {
@@ -360,11 +460,13 @@ input {
     letter-spacing: 0.025em;
     color: $Colorblack;
 }
-.main{
+
+.main {
     background-color: #e8e8e8;
 }
+
 .big-photo {
-   
+
     height: 665px;
     background: url(images/image_frame_84.png);
 
@@ -1023,6 +1125,10 @@ input {
         font-weight: 400;
         letter-spacing: 0.025em;
         color: #898989;
+
+        &:hover {
+            color: $PinkColor;
+        }
     }
 
     &_info {
