--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -13,6 +14,7 @@ a {
   padding-right: calc(50% - 800px);
 }
 
+/*префиксы*/
 .header {
   display: flex;
   justify-content: center;
@@ -126,6 +128,7 @@ summary::-webkit-details-marker {
   color: #f16d7f;
 }
 
+/*префиксы*/
 .header-left {
   display: flex;
   align-items: center;
@@ -159,6 +162,7 @@ input {
   background-color: white;
 }
 
+/*префиксы*/
 .header-right {
   display: flex;
   padding-left: 230px;
